@@ -3,6 +3,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using JetBrains.Annotations;
+using ScriptingMod.Managers;
 
 namespace ScriptingMod.Commands
 {
@@ -24,7 +25,15 @@ namespace ScriptingMod.Commands
 
         public override void Execute(List<string> _params, CommandSenderInfo _senderInfo)
         {
-            SdtdConsole.Instance.Output("Nothing to test.");
+            try
+            {
+                SdtdConsole.Instance.Output("Nothing to test.");
+
+            }
+            catch (Exception ex)
+            {
+                CommandManager.HandleCommandException(ex);
+            }
         }
     }
 #endif
