@@ -82,6 +82,7 @@
     <Compile Include="Commands\Dump.cs" />
     <Compile Include="Commands\CheckPower.cs" />
     <Compile Include="Commands\LogPowerManager.cs" />
+    <Compile Include="Commands\Pos.cs" />
     <Compile Include="Commands\ResetJs.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Exceptions\ReflectionException.cs" />
